# sdl2-imgui

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  tasks.md
.github/: FUNDING.yml
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
src/app/: CMakeLists.txt
src/app/App/: Main.cpp
src/core/: CMakeLists.txt
src/core/Core/: Application.cpp  Application.h  Log.cpp  Window.cpp  Window.h
src/core/Core/Debug/: Instrumentor.h
